--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,7 @@
-<%= form(%>
+<%= form_for(@student) do |f| %>
+  <%= f.label :first_name %>
+  <%= f.text_field :first_name %>
+  <%= f.label :room_number %>
+  <%= f.text_field :room_number %>
+  <%= f.submit %>
+<% end %>
